added a docker compose for a 'remote deployment' but locally

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # https://github.com/github/gitignore/blob/main/Python.gitignore
 
 ./zenml
+./zenml_
+./volumes
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -176,3 +178,223 @@ dist
 *env
 *.env
 *cache*
+volumes/mysql/data/#ib_16384_0.dblwr
+volumes/mysql/data/#ib_16384_1.dblwr
+volumes/mysql/data/auto.cnf
+volumes/mysql/data/binlog.000001
+volumes/mysql/data/binlog.000002
+volumes/mysql/data/binlog.index
+volumes/mysql/data/ca-key.pem
+volumes/mysql/data/ca.pem
+volumes/mysql/data/client-cert.pem
+volumes/mysql/data/client-key.pem
+volumes/mysql/data/ib_buffer_pool
+volumes/mysql/data/ibdata1
+volumes/mysql/data/ibtmp1
+volumes/mysql/data/mysql.ibd
+volumes/mysql/data/mysql.sock
+volumes/mysql/data/private_key.pem
+volumes/mysql/data/public_key.pem
+volumes/mysql/data/server-cert.pem
+volumes/mysql/data/server-key.pem
+volumes/mysql/data/undo_001
+volumes/mysql/data/undo_002
+volumes/mysql/data/#innodb_redo/#ib_redo9
+volumes/mysql/data/#innodb_redo/#ib_redo10
+volumes/mysql/data/#innodb_redo/#ib_redo11_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo12_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo13_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo14_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo15_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo16_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo17_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo18_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo19_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo20_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo21_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo22_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo23_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo24_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo25_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo26_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo27_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo28_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo29_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo30_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo31_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo32_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo33_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo34_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo35_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo36_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo37_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo38_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo39_tmp
+volumes/mysql/data/#innodb_redo/#ib_redo40_tmp
+volumes/mysql/data/#innodb_temp/temp_1.ibt
+volumes/mysql/data/#innodb_temp/temp_2.ibt
+volumes/mysql/data/#innodb_temp/temp_3.ibt
+volumes/mysql/data/#innodb_temp/temp_4.ibt
+volumes/mysql/data/#innodb_temp/temp_5.ibt
+volumes/mysql/data/#innodb_temp/temp_6.ibt
+volumes/mysql/data/#innodb_temp/temp_7.ibt
+volumes/mysql/data/#innodb_temp/temp_8.ibt
+volumes/mysql/data/#innodb_temp/temp_9.ibt
+volumes/mysql/data/#innodb_temp/temp_10.ibt
+volumes/mysql/data/mysql/general_log_213.sdi
+volumes/mysql/data/mysql/general_log.CSM
+volumes/mysql/data/mysql/general_log.CSV
+volumes/mysql/data/mysql/slow_log_214.sdi
+volumes/mysql/data/mysql/slow_log.CSM
+volumes/mysql/data/mysql/slow_log.CSV
+volumes/mysql/data/performance_schema/accounts_145.sdi
+volumes/mysql/data/performance_schema/binary_log_trans_189.sdi
+volumes/mysql/data/performance_schema/cond_instances_82.sdi
+volumes/mysql/data/performance_schema/data_lock_waits_161.sdi
+volumes/mysql/data/performance_schema/data_locks_160.sdi
+volumes/mysql/data/performance_schema/error_log_83.sdi
+volumes/mysql/data/performance_schema/events_errors_su_139.sdi
+volumes/mysql/data/performance_schema/events_errors_su_140.sdi
+volumes/mysql/data/performance_schema/events_errors_su_141.sdi
+volumes/mysql/data/performance_schema/events_errors_su_142.sdi
+volumes/mysql/data/performance_schema/events_errors_su_143.sdi
+volumes/mysql/data/performance_schema/events_stages_cu_111.sdi
+volumes/mysql/data/performance_schema/events_stages_hi_112.sdi
+volumes/mysql/data/performance_schema/events_stages_hi_113.sdi
+volumes/mysql/data/performance_schema/events_stages_su_114.sdi
+volumes/mysql/data/performance_schema/events_stages_su_115.sdi
+volumes/mysql/data/performance_schema/events_stages_su_116.sdi
+volumes/mysql/data/performance_schema/events_stages_su_117.sdi
+volumes/mysql/data/performance_schema/events_stages_su_118.sdi
+volumes/mysql/data/performance_schema/events_statement_119.sdi
+volumes/mysql/data/performance_schema/events_statement_120.sdi
+volumes/mysql/data/performance_schema/events_statement_121.sdi
+volumes/mysql/data/performance_schema/events_statement_122.sdi
+volumes/mysql/data/performance_schema/events_statement_123.sdi
+volumes/mysql/data/performance_schema/events_statement_124.sdi
+volumes/mysql/data/performance_schema/events_statement_125.sdi
+volumes/mysql/data/performance_schema/events_statement_126.sdi
+volumes/mysql/data/performance_schema/events_statement_127.sdi
+volumes/mysql/data/performance_schema/events_statement_128.sdi
+volumes/mysql/data/performance_schema/events_statement_129.sdi
+volumes/mysql/data/performance_schema/events_statement_130.sdi
+volumes/mysql/data/performance_schema/events_transacti_131.sdi
+volumes/mysql/data/performance_schema/events_transacti_132.sdi
+volumes/mysql/data/performance_schema/events_transacti_133.sdi
+volumes/mysql/data/performance_schema/events_transacti_134.sdi
+volumes/mysql/data/performance_schema/events_transacti_135.sdi
+volumes/mysql/data/performance_schema/events_transacti_136.sdi
+volumes/mysql/data/performance_schema/events_transacti_137.sdi
+volumes/mysql/data/performance_schema/events_transacti_138.sdi
+volumes/mysql/data/performance_schema/events_waits_cur_84.sdi
+volumes/mysql/data/performance_schema/events_waits_his_85.sdi
+volumes/mysql/data/performance_schema/events_waits_his_86.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_87.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_88.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_89.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_90.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_91.sdi
+volumes/mysql/data/performance_schema/events_waits_sum_92.sdi
+volumes/mysql/data/performance_schema/file_instances_93.sdi
+volumes/mysql/data/performance_schema/file_summary_by__94.sdi
+volumes/mysql/data/performance_schema/file_summary_by__95.sdi
+volumes/mysql/data/performance_schema/global_status_181.sdi
+volumes/mysql/data/performance_schema/global_variables_184.sdi
+volumes/mysql/data/performance_schema/hosts_146.sdi
+volumes/mysql/data/performance_schema/keyring_componen_191.sdi
+volumes/mysql/data/performance_schema/keyring_keys_152.sdi
+volumes/mysql/data/performance_schema/log_status_174.sdi
+volumes/mysql/data/performance_schema/memory_summary_b_154.sdi
+volumes/mysql/data/performance_schema/memory_summary_b_155.sdi
+volumes/mysql/data/performance_schema/memory_summary_b_156.sdi
+volumes/mysql/data/performance_schema/memory_summary_b_157.sdi
+volumes/mysql/data/performance_schema/memory_summary_g_153.sdi
+volumes/mysql/data/performance_schema/metadata_locks_159.sdi
+volumes/mysql/data/performance_schema/mutex_instances_97.sdi
+volumes/mysql/data/performance_schema/objects_summary__98.sdi
+volumes/mysql/data/performance_schema/performance_time_99.sdi
+volumes/mysql/data/performance_schema/persisted_variab_187.sdi
+volumes/mysql/data/performance_schema/prepared_stateme_175.sdi
+volumes/mysql/data/performance_schema/processlist_100.sdi
+volumes/mysql/data/performance_schema/replication_appl_165.sdi
+volumes/mysql/data/performance_schema/replication_appl_166.sdi
+volumes/mysql/data/performance_schema/replication_appl_167.sdi
+volumes/mysql/data/performance_schema/replication_appl_168.sdi
+volumes/mysql/data/performance_schema/replication_appl_170.sdi
+volumes/mysql/data/performance_schema/replication_appl_171.sdi
+volumes/mysql/data/performance_schema/replication_asyn_172.sdi
+volumes/mysql/data/performance_schema/replication_asyn_173.sdi
+volumes/mysql/data/performance_schema/replication_conn_162.sdi
+volumes/mysql/data/performance_schema/replication_conn_164.sdi
+volumes/mysql/data/performance_schema/replication_grou_163.sdi
+volumes/mysql/data/performance_schema/replication_grou_169.sdi
+volumes/mysql/data/performance_schema/rwlock_instances_101.sdi
+volumes/mysql/data/performance_schema/session_account__151.sdi
+volumes/mysql/data/performance_schema/session_connect__150.sdi
+volumes/mysql/data/performance_schema/session_status_182.sdi
+volumes/mysql/data/performance_schema/session_variable_185.sdi
+volumes/mysql/data/performance_schema/setup_actors_102.sdi
+volumes/mysql/data/performance_schema/setup_consumers_103.sdi
+volumes/mysql/data/performance_schema/setup_instrument_104.sdi
+volumes/mysql/data/performance_schema/setup_objects_105.sdi
+volumes/mysql/data/performance_schema/setup_threads_106.sdi
+volumes/mysql/data/performance_schema/socket_instances_147.sdi
+volumes/mysql/data/performance_schema/socket_summary_b_148.sdi
+volumes/mysql/data/performance_schema/socket_summary_b_149.sdi
+volumes/mysql/data/performance_schema/status_by_accoun_177.sdi
+volumes/mysql/data/performance_schema/status_by_host_178.sdi
+volumes/mysql/data/performance_schema/status_by_thread_179.sdi
+volumes/mysql/data/performance_schema/status_by_user_180.sdi
+volumes/mysql/data/performance_schema/table_handles_158.sdi
+volumes/mysql/data/performance_schema/table_io_waits_s_107.sdi
+volumes/mysql/data/performance_schema/table_io_waits_s_108.sdi
+volumes/mysql/data/performance_schema/table_lock_waits_109.sdi
+volumes/mysql/data/performance_schema/threads_110.sdi
+volumes/mysql/data/performance_schema/tls_channel_stat_190.sdi
+volumes/mysql/data/performance_schema/user_defined_fun_188.sdi
+volumes/mysql/data/performance_schema/user_variables_b_176.sdi
+volumes/mysql/data/performance_schema/users_144.sdi
+volumes/mysql/data/performance_schema/variables_by_thr_183.sdi
+volumes/mysql/data/performance_schema/variables_info_186.sdi
+volumes/mysql/data/sys/sys_config.ibd
+volumes/mysql/data/zenml/action.ibd
+volumes/mysql/data/zenml/alembic_version.ibd
+volumes/mysql/data/zenml/api_key.ibd
+volumes/mysql/data/zenml/artifact_version.ibd
+volumes/mysql/data/zenml/artifact_visualization.ibd
+volumes/mysql/data/zenml/artifact.ibd
+volumes/mysql/data/zenml/auth_devices.ibd
+volumes/mysql/data/zenml/code_reference.ibd
+volumes/mysql/data/zenml/code_repository.ibd
+volumes/mysql/data/zenml/event_source.ibd
+volumes/mysql/data/zenml/flavor.ibd
+volumes/mysql/data/zenml/logs.ibd
+volumes/mysql/data/zenml/model_version.ibd
+volumes/mysql/data/zenml/model_versions_artifacts.ibd
+volumes/mysql/data/zenml/model_versions_runs.ibd
+volumes/mysql/data/zenml/model.ibd
+volumes/mysql/data/zenml/pipeline_build.ibd
+volumes/mysql/data/zenml/pipeline_deployment.ibd
+volumes/mysql/data/zenml/pipeline_run.ibd
+volumes/mysql/data/zenml/pipeline.ibd
+volumes/mysql/data/zenml/run_metadata.ibd
+volumes/mysql/data/zenml/run_template.ibd
+volumes/mysql/data/zenml/schedule.ibd
+volumes/mysql/data/zenml/secret.ibd
+volumes/mysql/data/zenml/server_settings.ibd
+volumes/mysql/data/zenml/service_connector.ibd
+volumes/mysql/data/zenml/service.ibd
+volumes/mysql/data/zenml/stack_component.ibd
+volumes/mysql/data/zenml/stack_composition.ibd
+volumes/mysql/data/zenml/stack.ibd
+volumes/mysql/data/zenml/step_run_input_artifact.ibd
+volumes/mysql/data/zenml/step_run_output_artifact.ibd
+volumes/mysql/data/zenml/step_run_parents.ibd
+volumes/mysql/data/zenml/step_run.ibd
+volumes/mysql/data/zenml/tag_resource.ibd
+volumes/mysql/data/zenml/tag.ibd
+volumes/mysql/data/zenml/trigger_execution.ibd
+volumes/mysql/data/zenml/trigger.ibd
+volumes/mysql/data/zenml/user.ibd
+volumes/mysql/data/zenml/workspace.ibd
+.zen/config.yaml
